--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@ Tweet
             <p><strong>Do not fear! </strong>With this curated (and highly opinionated) list of resources, you will be guided through the thick jungle of countless R packages, from learning the basics of R's syntax, to scraping HTML tables, to a guide on how to make your work comprehensible and reproducible.</p>
             <p>Now, enjoy your journey.</p>
             <p style="font-size: 85%; color: #888;"><em>Some more efforts at persuasion: As I work in the media, I know how a lot of journalists are turned off by everything that doesn't have a graphical interface with buttons to click on. However, you don't need to spend days studying programming concepts in order to get started with R, as most operations can be carried out without applying scary things such as loops or conditionals &ndash; and, nowadays, high-level abstrations like <code>dplyr</code> make working with data a breeze. My advice if you're new to data journalism or data processing in general: Better learn R than Excel, 'cause getting to know Excel (and the countless other tools that each do a single thing) doesn't come for free, either.</em></p>
+            <p style="font-size: 85%; color: #888;"><em>This list is (partially) inspired by <a href="http://www.scoop.it/t/r-for-journalists">R for Journalists</a> by <a href="https://twitter.com/znmeb">Ed Borasky</a>, which is another great resource for getting to know R.</em></p>
         </section>
         <div id="toc">
             <h1>Chapters</h1>
