--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,12 @@
     <title>.Rddj - Resources for doing data journalism with R</title>
     <meta name="description" content=".Rddj - Resources for doing data journalism with R. A curated and opinionated list of resources for learning the in and outs of R for doing data journalism.">
     <meta name="keywords" content="R RStats Data Journalism Datajournalism Learning Tutorial Teaching">
+    <script type="text/javascript">
+    var host = "rddj.info";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
+    <link rel="canonical" href="https://rddj.info" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
