added g site verification

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     </script>
     <link rel="canonical" href="https://rddj.info" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="cpC0oIfDfdQviKpCcOJAkIR4lsM20xyvhXYDay03gqQ" />
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
