--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>.Rddj - Resources for doing data journalism with R</title>
-    <meta name="description" content=".Rddj - Resources for doing data journalism with R. A curated and opinionated list of resources for learning the in and outs of R for doing data journalism.">
+    <meta name="description" content=".Rddj - Resources for doing data journalism with R. A curated list of resources for learning the in and outs of R for doing data journalism.">
     <meta name="keywords" content="R RStats Data Journalism Datajournalism Learning Tutorial Teaching">
     <script type="text/javascript">
     var host = "rddj.info";
@@ -37,13 +37,13 @@
         </div>
     </div>
     <div class="container">
-        <h2 class="sub">Resources for doing data journalism with R.</h2>
+        <h2 class="sub">Hand-curated, high quality resources for doing data journalism with R.</h2>
         <section class="intro">
             <a class="twitter-share-button" href="https://twitter.com/share" data-related="grssnbchr" data-counturl="http://rddj.info" data-url="http://rddj.info" data-lang="en" data-text=".Rddj - Resources for doing data journalism with R:" data-hashtags="ddj,rstats,rddj">
 Tweet
 </a>
             <p><a href="http://www.r-project.org/">The R Project</a> is a great software environment for doing all sorts of <strong>data-driven journalism</strong>. It can be used for any of the stages of a typical data project: <strong>data collection</strong>, <strong>cleaning</strong>, <strong>analysis</strong> and even <strong>(interactive) visualization</strong>. And it's all <strong>reproducible and transparent!</strong> Sure, it requires a fair amount of scripting, yet...</p>
-            <p><strong>Do not fear! </strong>With this curated (and highly opinionated) list of resources, you will be guided through the thick jungle of countless R packages, from learning the basics of R's syntax, to scraping HTML tables, to a guide on how to make your work comprehensible and reproducible.</p>
+            <p><strong>Do not fear! </strong>With this hand-curated (and opinionated) list of resources, you will be guided through the thick jungle of countless R packages, from learning the basics of R's syntax, to scraping HTML tables, to a guide on how to make your work comprehensible and reproducible.</p>
             <p>Now, enjoy your journey.</p>
             <p style="font-size: 85%; color: #888;"><em>Some more efforts at persuasion: As I work in the media, I know how a lot of journalists are turned off by everything that doesn't have a graphical interface with buttons to click on. However, you don't need to spend days studying programming concepts in order to get started with R, as most operations can be carried out without applying scary things such as loops or conditionals &ndash; and, nowadays, high-level abstrations like <code>dplyr</code> make working with data a breeze. My advice if you're new to data journalism or data processing in general: Better learn R than Excel, 'cause getting to know Excel (and the countless other tools that each do a single thing) doesn't come for free, either.</em></p>
             <p style="font-size: 85%; color: #888;"><em>This list is (partially) inspired by <a href="http://www.scoop.it/t/r-for-journalists">R for Journalists</a> by <a href="https://twitter.com/znmeb">Ed Borasky</a>, which is another great resource for getting to know R.</em></p>
